code clean up and comments

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -164,7 +164,7 @@
 
     </style>
 
-    <div id='browserElementContainer' hidden?='{{UI.View.BROWSER_ELEMENT !== ui.view}}'></div>
+    <div id='browserElementContainer' hidden?='{{UI.View.BROWSER !== ui.view}}'></div>
 
     <uproxy-copypaste hidden?='{{ UI.View.COPYPASTE !== ui.view }}'>
     </uproxy-copypaste>
