--- a/src/chrome/extension/polymer/browser-elements.html
+++ b/src/chrome/extension/polymer/browser-elements.html
@@ -1,4 +1,3 @@
 <!doctype html>
-<!-- Popup displayed if the Chrome App is not installed. Contains just the
-app-missing Polymer element. -->
+<!-- Imports for all Chrome-specific Polymer elements. This ensures that the elements will be vulcanized along with the generic UI Polymer elements. -->
 <link rel='import' href='app-missing.html'>
