standardized naming of files; improved Gruntfile

--- a/samples/copypaste-freedom-chat/main.html
+++ b/samples/copypaste-freedom-chat/main.html
@@ -116,7 +116,7 @@
 
     <!-- ============================= Scripts ============================= -->
 
-    <script src='main.static.js'></script>
+    <script src='main.core-env.static.js'></script>
 
   </body>
 </html>
