--- a/src/chrome/app/install-incomplete.html
+++ b/src/chrome/app/install-incomplete.html
@@ -1,1 +1,32 @@
-Please install the extension.
+<!doctype html>
+<!-- Popup displayed if the Chrome Ext is not installed. Contains just the
+ext-missing Polymer element. -->
+<html>
+
+<head>
+  <script src='lib/webcomponentsjs/webcomponents.js'></script>
+
+  <link rel='import' href='polymer/vulcanized.html'>
+  <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
+
+  <style>
+  @font-face {
+    font-family: Roboto, sans-serif;
+    src: url('styles/eurostile.ttf');
+  }
+  body {
+    display: block;
+    text-align: center;
+    font-family: Roboto, sans-serif;
+    font-size: 13px;
+    margin: 0px;
+  }
+  </style>
+</head>
+
+<body>
+  <uproxy-ext-missing></uproxy-ext-missing>
+</body>
+
+</html>
+
