Update style and text for proxy failure page

--- a/src/generic_ui/disconnected.html
+++ b/src/generic_ui/disconnected.html
@@ -4,12 +4,13 @@
   <title>uProxy disconnected</title>
   <style>
     body {
-      background-color: #E6E6E6
+      background-color: white;
     }
   </style>
   <script src='scripts/dependencies.js'></script>
   <script src='scripts/uproxy.js'></script>
 
+  <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
   <link rel='import' href='polymer/vulcanized.html'>
 </head>
 
