Capitalize I in Internet

--- a/src/generic_ui/polymer/confirm.html
+++ b/src/generic_ui/polymer/confirm.html
@@ -58,7 +58,7 @@
       </paper-button>
 
       <h2 id='proxyReverted' hidden>
-        Proxy settings reverted. You are now using your local internet connection.
+        Proxy settings reverted. You are now using your local Internet connection.
       </h2>
     </div>  <!-- end of errorBox -->
   </template>
