--- a/samples/simple-freedom-chat/main.html
+++ b/samples/simple-freedom-chat/main.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>PeerConnection chat client</title>
-  <script src='lib/freedom.js'></script>
+  <script src='freedom.js'></script>
 </head>
 
 <body>
