Re-add "overflow-y: auto" rule to .roster
This was originally removed to ensure that the tips would actually
display in an earlier version, changes were made since then that no
longer require this.  It was also causing an issue with the display of
some content in the roster (see http://stackoverflow.com/a/9519933).

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -67,6 +67,7 @@
       }
       .roster {
         position: relative;
+        overflow-y: auto;
         display: block;
       }
       .getShareTab {
