Manually set a font-size for the uproxy-tips in root
The toolbar was causing some of the font sizes for the tips to be too
large, this forces them to be consistent.

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -119,6 +119,7 @@
       }
       uproxy-tip {
         z-index: 1;
+        font-size: 13px; /* reset to normal, core-toolbar interferes with font sizes */
       }
     </style>
 
