--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -121,6 +121,12 @@
         z-index: 1;
         font-size: 13px; /* reset to normal, core-toolbar interferes with font sizes */
       }
+      uproxy-tip.error::shadow #box {
+        background: firebrick;
+      }
+      uproxy-tip.error::shadow #arrow {
+        border-bottom-color: firebrick;
+      }
     </style>
 
     <uproxy-copypaste hidden?='{{ UI.View.COPYPASTE !== ui.view }}'>
@@ -134,6 +140,17 @@
 
       <core-toolbar id='toolbar'>
         <core-icon-button id='btnSettings' icon="menu" on-tap="{{ settingsView }}"></core-icon-button>
+
+        <uproxy-tip class='error' hidden?='{{ !ui.copyPasteUrlError }}' on-closed='{{ dismissCopyPasteError }}'>
+          <h3>Cannot open manual connection</h3>
+          <p>
+            It is not currently possible to open a manual connection at the
+            same time as being signed in to a social network.  To launch a
+            manual connection, please log out through the settings menu and
+            re-paste the link.
+          </p>
+        </uproxy-tip>
+
         <div id='title' flex>uProxy</div>
         <core-icon-button src='../icons/sharing-enabled-toolbar.png'
           hidden?='{{model.contacts.shareAccessContacts.onlineTrustedUproxy.length==0 && model.contacts.shareAccessContacts.offlineTrustedUproxy.length==0}}'
