vulcanize from browser dir instead of generic_ui

--- a/src/chrome/app/polymer/ext-missing.html
+++ b/src/chrome/app/polymer/ext-missing.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../../generic_ui/lib/polymer/polymer.html">
-<link rel="import" href="../../../generic_ui/lib/paper-button/paper-button.html">
+<link rel="import" href="../lib/polymer/polymer.html">
+<link rel="import" href="../lib/paper-button/paper-button.html">
 
 <polymer-element name='uproxy-ext-missing'>
   <template>
