Make error tooltips completely opaque

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -127,6 +127,9 @@
         z-index: 1;
         font-size: 13px; /* reset to normal, core-toolbar interferes with font sizes */
       }
+      uproxy-tip.error {
+        opacity: 1;
+      }
       uproxy-tip.error::shadow #box {
         background: firebrick;
       }
