--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -50,6 +50,7 @@
     }
     #descriptionWrapper {
       padding-left: 32px;
+      padding-right: 32px;
       color: rgb(112, 112, 112);
     }
     .userInfoName, .userInfoIDWithoutName {
@@ -73,12 +74,6 @@
       background: #009688;  /* dark green */
       color: white;
       width: 70px;
-    }
-    paper-button:focus {
-      border: 1px solid #008074;
-    }
-    paper-input-decorator {
-      max-width: 60%;
     }
     paper-input-decorator /deep/ .unfocused-underline,
     paper-input-decorator /deep/ .focused-underline,
@@ -127,8 +122,8 @@
         <paper-input-decorator label="Custom STUN server">
           <input is="core-input" value='{{stunServer}}'>
         </paper-input-decorator>
-        <paper-button class='button' on-tap="{{setStunServer}}">Update</paper-button>
-        <paper-button class='button' on-tap="{{resetStunServers}}">Reset</paper-button>
+        <paper-button raised on-tap="{{setStunServer}}">Update</paper-button>
+        <paper-button raised on-tap="{{resetStunServers}}">Reset</paper-button>
         <br><br>
         <p id='confirmNewServer' class='advancedSettingsText' hidden>STUN server updated. New server will be used for future connections.</p>
         <p id='confirmResetServers' class='advancedSettingsText' hidden>STUN servers reset. Default servers will be used for future connections.</p>
