--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -9,10 +9,7 @@
 <link rel="import" href='confirm.html'>
 <link rel='import' href='copypaste.html'>
 <link rel='import' href='tip.html'>
-<link rel='import' href='browser-elements.html'>
-<link rel="import" href="../lib/core-toolbar/core-toolbar.html">
-<link rel="import" href="../lib/core-icon-button/core-icon-button.html">
-<link rel="import" href="../lib/paper-tabs/paper-tabs.html">
+<link rel='import' href='feedback.html'>
 <link rel='import' href='browser-elements.html'>
 
 <polymer-element name='uproxy-root' attributes='model' on-update-view='{{ updateView }}'>
@@ -69,6 +66,7 @@
       }
       #toolbar paper-tab.core-selected, #btnSettings:hover {
         opacity: 1;
+        cursor: pointer;
       }
       #title {
         font-size: 1.75em;
@@ -135,6 +133,8 @@
     <uproxy-copypaste hidden?='{{ UI.View.COPYPASTE !== ui.view }}'>
     </uproxy-copypaste>
 
+    <uproxy-feedback hidden?='{{ UI.View.FEEDBACK !== ui.view }}'></uproxy-feedback>
+
     <uproxy-splash id='splash' hidden?='{{UI.View.SPLASH!=ui.view}}'>
     </uproxy-splash>
 
@@ -142,7 +142,7 @@
         hidden?='{{ ui.view !== UI.View.ROSTER && ui.view !== UI.View.SETTINGS }}'>
 
       <core-toolbar id='toolbar'>
-        <core-icon-button id='btnSettings' icon="menu" on-tap="{{ settingsView }}"></core-icon-button>
+        <core-icon id='btnSettings' icon="menu" on-tap="{{ settingsView }}"></core-icon>
         <div id='title' flex>uProxy</div>
         <core-icon-button src='../icons/sharing-enabled-toolbar.png'
           hidden?='{{model.contacts.shareAccessContacts.onlineTrustedUproxy.length==0 && model.contacts.shareAccessContacts.offlineTrustedUproxy.length==0}}'
