add link to feedback page in settings menu

--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -116,7 +116,7 @@
         <paper-checkbox id='logCheckbox'></paper-checkbox>
         <div id='logCheckboxLabel'>Include logs</div>
       </div>
-      <p id='feedbackNotice'>Your feedback and email address will be sent to uProxy.org</p>
+      <p id='feedbackNotice'>Your feedback and email address will be sent to uProxy.org.</p>
     </div>
     <div id='sendFeedback' on-tap='{{ sendFeedback }}'>SEND FEEDBACK<div>
 
