--- a/src/generic_ui/polymer/copypaste.html
+++ b/src/generic_ui/polymer/copypaste.html
@@ -64,7 +64,7 @@
       <p>Copy and paste this URL to your friend over a secure channel.</p>
 
       <textarea readonly hidden?='{{ !ui.copyPasteGettingMessage.length }}'
-        class='message'>https://www.uproxy.org/request/{{ ui.copyPasteGettingMessage }}</textarea>
+        class='message' on-tap='{{ select }}'>https://www.uproxy.org/request/{{ ui.copyPasteGettingMessage }}</textarea>
 
       <span class='message-loading' hidden?='{{ ui.copyPasteGettingMessage.length }}'>Loading...</span>
 
@@ -92,7 +92,7 @@
       </p>
 
       <textarea readonly hidden?='{{ !ui.copyPasteSharingMessage.length }}'
-        class='message'>https://www.uproxy.org/offer/{{ ui.copyPasteSharingMessage }}</textarea>
+        class='message' on-tap='{{ select }}'>https://www.uproxy.org/offer/{{ ui.copyPasteSharingMessage }}</textarea>
 
       <span class='message-loading' hidden?='{{ ui.copyPasteSharingMessage.length }}'>Loading...</span>
 
