constants and get initial state

--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -8,6 +8,7 @@
 
 
   <script src='scripts/uproxy.js'></script>
+  <script src='scripts/constants.js'></script>
   <script src='scripts/user.js'></script>
   <script src='scripts/ui.js'></script>
   <script src='scripts/dependencies.js'></script>
