--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -2,6 +2,7 @@
 <link rel='import' href='../lib/paper-button/paper-button.html'>
 <link rel='import' href='../lib/paper-checkbox/paper-checkbox.html'>
 <link rel='import' href='../lib/paper-input/paper-input-decorator.html'>
+<link rel='import' href='../lib/paper-dialog/paper-action-dialog.html'>
 <link rel='import' href='faq-link.html'>
 
 <polymer-element name='uproxy-feedback' attributes=''>
@@ -11,10 +12,6 @@
       text-align: center;
       font-color: #009688;  /* dark green */
     }
-    .inputLabel {
-      font-weight: bold;
-      margin: 0;
-    }
     #titleContainer {
       height: 70px;
       width: 100%;
@@ -23,14 +20,19 @@
       display: table;
       text-align: left;
     }
-    .moreInfo {
-      color: grey;
-      font-size: ;
+    #title {
+      display: table-cell;
+      vertical-align: middle;
+      font-size: 1.25em;
     }
-    #form {
+    #formContainer {
       margin: 30px;
       text-align: left;
       color: #009688;
+    }
+    .inputLabel {
+      font-weight: bold;
+      margin: 0;
     }
     #logCheckboxLabel {
       display: table-cell;
@@ -44,6 +46,10 @@
     #logCheckbox {
       display: table-cell;
       vertical-align: middle;
+    }
+    #moreInfo {
+      color: grey;
+      font-size: ;
     }
     core-icon[icon="arrow-back"] {
       color: white;
@@ -60,14 +66,8 @@
     core-icon[icon="help"]{
       height: 15px;
     }
-    .title {
-      display: table-cell;
-      vertical-align: middle;
-      font-size: 1.25em;
-    }
     paper-button {
-      background: #009688;  /* dark green */
-      color: white;
+      color: #009688;
     }
     paper-input-decorator /deep/ .unfocused-underline,
     paper-input-decorator /deep/ .focused-underline,
@@ -100,35 +100,54 @@
       color: #009688;
       font-weight: bold;
       cursor: pointer;
+      text-align: center;
     }
     </style>
     <div id='titleContainer'>
-      <div class='title'>
+      <div id='title'>
         <core-icon icon="arrow-back" on-tap='{{ backToSettings }}'></core-icon>
         Submit feedback
       </div>
     </div>
-    <div id='form'>
+
+    <div id='formContainer'>
       <p class='inputLabel'>Email (optional)</p>
       <paper-input-decorator label="Email address">
-        <input is="core-input" value='{{ email }}' on-blur='{{update}}'>
+        <input id="emailInput"
+               is="core-input"
+               value='{{ email }}'
+               placeholder="Email address">
       </paper-input-decorator>
+
       <p class='inputLabel'>Enter your feedback below</p>
       <paper-input-decorator label="Write your feedback">
-        <input is="core-input" value='{{ feedback }}' on-blur='{{update}}'>
+        <input id="feedbackInput"
+               is="core-input"
+               value='{{ feedback }}'
+               placeholder="Write your feedback">
       </paper-input-decorator>
+
       <div id='logCheckboxContainer'>
         <paper-checkbox id='logCheckbox'></paper-checkbox>
         <div id='logCheckboxLabel'>Include logs</div>
       </div>
-      <p class='moreInfo'>
+
+      <p id='moreInfo'>
         Your feedback and email address will be sent to uProxy.org. Your logs and email may be personally identifiable information.
         <uproxy-faq-link>
           <core-icon icon="help" anchor='feedbackLogs'></core-icon>
         </uproxy-faq-link>
       </p>
+
+      <div id='sendFeedback' on-tap='{{ sendFeedback }}'>SEND FEEDBACK</div>
+
+      <!-- Dialog is opened when .toggle() is called in sendFeedback -->
+      <!-- Without layered="false", styling needs to be prefixed with 'html /deep/' in order to have effect on the dialog contents.'  -->
+      <paper-action-dialog backdrop layered="false" heading="Thank you!" id="confirmation">
+        <p>Your feedback has been submitted to the uProxy development team.</p>
+        <paper-button affirmative on-tap='{{ backToRoster }}'>Back to Roster</paper-button>
+      </paper-action-dialog>
     </div>
-    <div id='sendFeedback' on-tap='{{ sendFeedback }}'>SEND FEEDBACK<div>
 
   </template>
   <script src='feedback.js'></script>
