--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -174,7 +174,7 @@
         </uproxy-tip>
 
         <div class='bottom fit'>
-          <paper-tabs selected='{{ ui.mode }}'>
+          <paper-tabs selected='{{ model.globalSettings.mode }}'>
             <paper-tab>Get Access</paper-tab>
             <paper-tab>Share Access</paper-tab>
           </paper-tabs>
